--- a/package.json
+++ b/package.json
@@ -3,20 +3,50 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "gen": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.4",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@graphql-sse/apollo-client": "^0.0.19",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/drawer": "^6.6.4",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
+    "@shopify/react-native-skia": "0.1.196",
+    "@shopify/restyle": "^2.4.2",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.13",
+    "expo-asset": "^8.10.1",
+    "expo-font": "~11.4.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "graphql": "^16.8.1",
+    "graphql-sse": "^2.3.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-codegen/typescript-react-apollo": "^4.0.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-dotenv": "^0.2.0",
+    "react-native-dotenv": "^3.4.9",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "private": true
